change link to french site

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="to_contact" href="#contact">Hello</a>
                     </li>
 
-                    <li><a id="language_en" href="/">Fr</a></li>
+                    <li><a id="language_en" href="http://gab.ae/">Fr</a></li>
 
                 </ul>
             </div>
