minor string change

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <br /><br /><div class="col-xs-12 center_text">
 
-                      <h2>Another way to reserve</h2>
+                      <h2>Reserve a place. I know you want to</h2>
                       <form action="http://formspree.io/gabrieldancause@gmail.com" role="form" method="POST" autocomplete="on">
                         <div class="form-group">
                           <input type="name" name="name" class="form-control form-input" placeholder="Name" required>
